--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                                 </div>
                                 <div class="form-group mt-3 question">
-                                    <label class="stacked question" id="HtmlPage_htmlPage.response1">Which office are you from? (Adelaide/Canberra/Perth/Melbourne/Sydney)
+                                    <label class="stacked question" id="HtmlPage_htmlPage.response1">Which office are you from? (Adelaide / Canberra / Melbourne / Perth / Sydney)
                                     </label>
                                     <br/>
                                     <input class="stacked question-response" type="radio" id="response1-1" name="response1" value="Adelaide">
